from scene_management.scenes.announce import Announce

class Complete(Announce):
    def on_load(self) -> None:
        return super().on_load()