@startuml AllClass

package Networks
{
    enum AccessPoint
    {
        ROOM_ENTRY,
        ROOM_EXIT
    }

    class AccessPointData
    {
        +path: str
    }

    abstract DTO<<dataclass, dataclass_json>>
    {
        +from_json(json: str): DTO
    }

    class Network
    {
        +{static}is_connection(): bool
        +{static}get(access_point: AccessPoint, req: DTO): str
        +{static}post(access_point: AccessPoint, req: DTO): str
    }

    package Requests
    {
        class AccessRequest
        {
            id: str
            place: Place
        }

        class Place
        {
            campus: str
            name: str
        }

        class StudentID
        {
            +id: int
        }
    }
}

package Utils
{
    class MiscHelper
    {
        +get_root(target: Misc): Misc
    }
}

package Views
{
    package SceneManagement
    {
        class SceneManager
        {
            -__stack: list[Scene]
            -__currentScene: Scene
            +{class}load(scene: Scene): None
            +{class}back(): None
            +{class}back_root(): None
        }

        abstract Scene
        {
            -__backgound: PhotoImage
            +{abstract}on_load(): None
            +on_show(): None
            +on_hide(): None
            +on_destory(): None
        }

        package Scenes
        {
            abstract Announce
            {
                #_message: str
            }
            class Complete
            class Error
            class Home
            class Login
            {
                -__login_process(id: str): None
            }
            class Loading
            {
                -__task: Thread
            }
        }
    }

    package Widgets
    {
        class BackButton
        class CloseButton
        abstract ImageButton
        {
            #{abstract}_on_click(): None
        }
        class RoomAccessButton
        {
            -__access_point: AccessPoint
        }
    }
}

Scene --|> tk.Frame
Announce --|> Scene
Home --|> Scene
Login --|> Scene
Loading --|> Scene
Error --|> Announce
Complete --|> Announce

AccessRequest --|> DTO
StudentID --|> DTO
Place --|> DTO

ImageButton --|> tk.Button
BackButton --|> ImageButton
CloseButton --|> ImageButton
RoomAccessButton --|> ImageButton

Network .left.> DTO
Network .up.> AccessPointData
AccessPoint .left.> AccessPointData

SceneManager "1" *.left.> "*" Scene

AccessRequest --+ Place

Login --> Network : use

@enduml